src/objects/LoRaWAN_Tenancy__c.object
<CustomObject>
    <description>Represents a ThingPark Subscriber, who may have multiple subscriptions.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Customer Account this Tenancy is attached to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LoRaWAN Tenancies</relationshipLabel>
        <relationshipName>LoRaWAN_Tenancies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actility_Subscriber_ID__c</fullName>
        <label>Actility Subscriber ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Max_Average__c</fullName>
        <defaultValue>60</defaultValue>
        <description>The maximum number of message per day averaged over the month.</description>
        <label>Daily Max Average</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overage_Rate__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>Overage Rate per message above the FUP (Fair Usage Policy).</description>
        <label>Overage Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Devices__c</fullName>
        <description>Total number of devices for all packages for this tenancy.</description>
        <label>Total Devices</label>
        <summarizedField>LoRaWAN_Package__c.Quantity_Of_Devices__c</summarizedField>
        <summaryForeignKey>LoRaWAN_Package__c.LoRaWAN_Tenancy__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>LoRaWAN Tenancy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LoRaWAN Tenancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoRaWAN Tenancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>